# rust-handbook

./: README.md
docs/: thread-parking-and-unparking.md  under-the-hood-vec.md
docs/google-cloud-client-libraries/: 01-introduction.md  02-setting-up-your-development-environment.md  03-setting-up-rust-on-cloud-shell.md  04-how-to-initialize-a-client.md  05-generate-text-using-the-vertex-ai-gemini-api.md  06-01-push-data-on-object-writes.md  06-02-rewriting-objects.md  06-03-speed-up-large-object-downloads.md  06-04-use-errors-to-terminate-writes.md  06-05-how-to-write-tests-using-the-storage-client.md  06-using-google-cloud-storage.md  07-using-the-compute-engine-api.md  08-update-a-resource-using-a-field-mask.md  09-configuring-retry-policies.md  10-error-handling.md  11-examine-error-details.md  12-handling-binding-errors.md  13-working-with-list-operations.md  14-working-with-long-running-operations.md  15-configuring-polling-policies.md  16-how-to-write-tests-using-a-client.md  17-how-to-write-tests-for-long-running-operations.md  18-working-with-enums.md
docs/serde/: 01_overview.md  02_getting-help.md  03_serde-data-model.md  04_using-derive.md  05_attributes.md  06_custom-serialization.md  07_writing-a-data-format.md  08_deserializer-lifetimes.md  09_examples.md  10_no-std-support.md  11_feature-flags.md
gcp/: Cargo.toml
gcp/cloud-storage/: Cargo.toml
gcp/cloud-storage/src/: download-large-objects.rs  lib.rs  mocking.rs  pushing-object-data.rs  quickstart.rs  rewriting-objects.rs  terminate-upload.rs
gcp/compute-engine/: Cargo.toml
gcp/compute-engine/src/: main.rs
gcp/dev-env/: Cargo.toml
gcp/dev-env/src/: main.rs
gcp/error-handling/: Cargo.toml
gcp/error-handling/src/: main.rs
gcp/examine-error-details/: Cargo.toml
gcp/examine-error-details/src/: main.rs
gcp/handling-binding-errors/: Cargo.toml
gcp/handling-binding-errors/src/: main.rs
gcp/lro/: Cargo.toml
gcp/lro/src/: main.rs
gcp/retry-policy/: Cargo.toml
gcp/retry-policy/src/: default-retry-policy-with-limit.rs  default-retry-policy.rs  override-retry-policy.rs
gcp/tests-using-client/: Cargo.toml
gcp/tests-using-client/src/: main.rs
gcp/updating-resource/: Cargo.toml
gcp/updating-resource/src/: main.rs
gcp/vertex-api/: Cargo.toml
gcp/vertex-api/src/: prompt.rs  prompt_and_image.rs
handbook-examples/: Cargo.toml
handbook-examples/examples/: thread-park-and-unpark.rs
