[workspace]
resolver = "3"
members = ["dev-env", "vertex-api"]

[workspace.dependencies]
google-cloud-aiplatform-v1 = { version = "1.2.0", default-features = false, features = [
  "prediction-service",
] }
google-cloud-gax = "1.2.0"
google-cloud-secretmanager-v1 = "1.1.1"
tokio = { version = "1.48.0", features = ["macros"] }
