[package]
name = "cloud-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
google-cloud-gax.workspace = true
google-cloud-storage.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall = "0.13.1"

[[bin]]
name = "quickstart"
path = "src/quickstart.rs"

[[bin]]
name = "pushing-object-data"
path = "src/pushing-object-data.rs"

[[bin]]
name = "rewriting-objects"
path = "src/rewriting-objects.rs"

[[bin]]
name = "download-large-objects"
path = "src/download-large-objects.rs"

[[bin]]
name = "terminate-upload"
path = "src/terminate-upload.rs"

[[bin]]
name = "mocking"
path = "src/mocking.rs"
